# JniLearning

./: .gitignore  build.gradle
app/: Android.mk  CMakeLists-CmakeList详解.txt  CMakeLists-流程控制与函数.txt  CMakeLists-预编译库与依赖源码方式.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rzm/c/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: MyParcel.cpp  MyParcel.h  cmake-lib.cpp  ffmpeg-lib.cpp  native-lib.cpp  native-lib2.cpp  parcel-lib.cpp
app/src/main/cpp/ffmpeg/: build_ffmpeg.sh
app/src/main/cpp/libcount/: CMakeLists.txt  add.cpp  countutil.h  div.cpp  mul.cpp  sub.cpp
app/src/main/cpp/libget/: CMakeLists.txt  get1.c  get2.c  get3.c  getutil.h
app/src/main/java/com/rzm/c/: FFmpegActivity.kt  HomeActivity.kt  JNIActivity.java  JavaInstance.java  JavaInstanceChildren.java  MainActivity.java  MultiCMakeListsActivity.kt  ThreadActivity.kt
app/src/main/java/com/rzm/c/parcel/: MyParcel.kt  ParcelActivity.kt
app/src/main/java/com/rzm/c/test/: EngineUtils.java  JavaChildrenClass.java  JavaEngine.java  PreviewActivity.java
app/src/main/java/com/rzm/c/utils/: JniDynamicUtils.java  JniUtils.java
app/src/main/res/layout/: activity_ffmpeg.xml  activity_home.xml  activity_main.xml  activity_multi_cmake_lists.xml  activity_parcel.xml  activity_rereview.xml  activity_thread.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rzm/c/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
